<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/container_padding"
    tools:context=".ui.main.MainFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tv_layout_taxi_price_per_person"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toStartOf="@+id/et_taxi_price_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_taxi_price_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_taxi_price_per_person"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:nextFocusDown="@id/et_amount" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_taxi_price_2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_layout_taxi_price_per_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_layout_taxi_price_per_person"
        app:layout_constraintTop_toBottomOf="@+id/tv_layout_taxi_price_per_person">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_taxi_price_person_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/enter_taxi_price_per_person_2"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:nextFocusDown="@id/et_amount">

            <requestFocus />
        </android.support.design.widget.TextInputEditText>

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corner"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/tv_layout_taxi_price_per_person"
        app:layout_constraintStart_toStartOf="@+id/tv_layout_taxi_price_per_person"
        app:layout_constraintTop_toBottomOf="@+id/tv_layout_taxi_price_per_person">

        <TextView
            android:id="@+id/tv_status_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="@dimen/content_padding"
            android:text="DISPLAY"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_display"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner2"
            android:gravity="center_vertical"
            android:padding="@dimen/content_padding"
            android:text="CHANGE"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/ledgerRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_layout_number_of_people"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tv_layout_amount"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_layout_number_of_people"
        app:layout_constraintEnd_toStartOf="@+id/tv_layout_number_of_people"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_layout_number_of_people">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/amount"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tv_layout_number_of_people"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fabCalculate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_layout_amount">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_number_of_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/number_of_people"
            android:inputType="numberSigned"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:src="@drawable/ic_attach_money_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_layout_number_of_people"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_layout_number_of_people"
        app:layout_constraintVertical_bias="0.52" />


    <!--todo add go button-->

</android.support.constraint.ConstraintLayout>
